# barq-hub

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  init-db.sql  init.sql  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  build.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  types.rs
backend/api/: admin_handlers.rs  agent_handlers.rs  handlers.rs  knowledge_handlers.rs  mod.rs  provider_handlers.rs  routes.rs  settings_handlers.rs  state.rs
backend/db/: agents.rs  applications.rs  costs.rs  mod.rs  pool.rs  provider_accounts.rs  sessions.rs
backend/governance/: audit.rs  mod.rs
backend/grpc/: auth.rs  chat_service.rs  mod.rs  models_service.rs
backend/knowledge/: chunker.rs  embeddings.rs  mod.rs
backend/proto/: barq.proto
backend/providers/: account_manager.rs  anthropic.rs  azure_openai.rs  cohere.rs  local.rs  mistral.rs  mod.rs  openai.rs
backend/workflow/: dag.rs  engine.rs  tools.rs  types.rs
frontend/: Dockerfile
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/: mode-toggle.tsx  theme-toggle.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: api.ts
frontend/stores/: auth-store.ts
frontend/types/: index.ts
migrations/: init.sql  seed.sql
src/: cost.rs  lib.rs  main.rs  types.rs
src/agents/: mod.rs  registry.rs  runtime.rs
src/api/: admin_handlers.rs  governance_handlers.rs  middleware.rs  provider_handlers.rs  state.rs  voice_handlers.rs  workflow_handlers.rs
src/db/: audit.rs  provider_accounts.rs  users.rs
src/governance/: auth.rs  rbac.rs
src/knowledge/: rag.rs  types.rs  vector_db.rs  vector_store.rs
src/providers/: adapter.rs  bedrock.rs  gemini.rs  mod.rs
src/workflow/: mod.rs  state.rs
(+23 files in other folders)
