[package]
name = "barq-hub"
version = "0.1.0"
edition = "2021"
authors = ["BARQ Team"]
description = "AI Management Console - Enterprise-grade AI orchestration platform"
license = "MIT"
repository = "https://github.com/YASSERRMD/barq-hub"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid", "bigdecimal"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics
prometheus = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Hashing
md-5 = "0.10"

# Password hashing
bcrypt = "0.15"

# JWT
jsonwebtoken = "9"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
mockall = "0.12"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "barq-hub"
path = "main.rs"

[lib]
path = "lib.rs"
